--- a/package.json
+++ b/package.json
@@ -1,17 +1,22 @@
 {
-  "name": "ajaxdeletetest",
+  "name": "node-socket.io-example",
   "version": "1.0.0",
   "description": "",
   "main": "script.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "node server.js"
+    "build": "grunt uglify",
+    "start": "npm run clean:dist && npm run build && node server.js",
+    "clean:dist"   : "rimraf dist"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^4.3.1",
     "express": "^4.17.1",
+    "grunt": "^1.0.4",
+    "grunt-cli": "^1.3.2",
+    "grunt-contrib-uglify-es": "github:gruntjs/grunt-contrib-uglify#harmony",
     "jquery": "^3.4.1",
     "knockout": "^3.5.0",
     "socket.io": "^2.3.0"
